--- a/index.html
+++ b/index.html
@@ -1,118 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Лотерея</title>
-<style>
-  body { font-family: Arial, sans-serif; background: #f0f0f0; margin: 20px; }
-  h1 { text-align: center; }
-  .boxes { display: flex; flex-wrap: wrap; max-width: 440px; margin: 20px auto; gap: 10px; }
-  .box {
-    width: 100px; height: 100px;
-    background: #ddd; border-radius: 8px;
-    display: flex; justify-content: center; align-items: center;
-    cursor: pointer; user-select: none;
-    font-weight: bold; font-size: 18px;
-    transition: background 0.3s;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  }
-  .box.locked {
-    background: #bbb;
-    cursor: default;
-    color: #555;
-    box-shadow: none;
-  }
-  .message {
-    text-align: center; margin-top: 20px;
-    font-size: 22px;
-    font-weight: 700;
-    color: #2c3e50;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>Лотерея</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f5f5f5;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    h1 { margin-bottom: 20px; }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, 60px);
+      gap: 10px;
+    }
+    .cell {
+      width: 60px;
+      height: 60px;
+      background: white;
+      border: 2px solid #ccc;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+    .cell.clicked {
+      background: #ddd;
+      cursor: default;
+    }
+    .result {
+      margin-top: 20px;
+      font-size: 1.2em;
+      color: #444;
+    }
+  </style>
 </head>
 <body>
-  <h1>Лотерея: выбери коробку</h1>
-  <div class="boxes" id="boxes"></div>
-  <div class="message" id="message"></div>
+  <h1>Лотерея</h1>
+  <div class="grid" id="grid"></div>
+  <div class="result" id="result"></div>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
   <script>
-    // Твой конфиг Firebase (с добавленным databaseURL)
-    const firebaseConfig = {
-      apiKey: "AIzaSyBH_yHOUz5av_t0pow6J6PnzfbnJQ5KI3Y",
-      authDomain: "lottery-game-2ed99.firebaseapp.com",
-      databaseURL: "https://lottery-game-2ed99-default-rtdb.firebaseio.com",
-      projectId: "lottery-game-2ed99",
-      storageBucket: "lottery-game-2ed99.firebasestorage.app",
-      messagingSenderId: "342594862502",
-      appId: "1:342594862502:web:88461096c3c1727fa0a367"
-    };
+    const grid = document.getElementById('grid');
+    const result = document.getElementById('result');
+    const totalCells = 20;
+    const prizes = new Set([3, 8, 17]); // номера ячеек с призами (от 0)
+    const clicked = new Set();
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
-    const boxesContainer = document.getElementById('boxes');
-    const messageEl = document.getElementById('message');
-
-    const totalBoxes = 10;
-    const prizeBoxes = [2, 5, 8]; // призы в коробках
-    const prizeNames = {
-      2: "Аватарка",
-      5: "Плашка",
-      8: "Табличка"
-    };
-
-    let boxesState = {};
-
-    function loadState() {
-      db.ref('lottery/boxes').once('value').then(snapshot => {
-        boxesState = snapshot.val() || {};
-        renderBoxes();
-      }).catch(() => {
-        boxesState = {};
-        renderBoxes();
-      });
-    }
-
-    function saveChoice(index, result) {
-      const update = {};
-      update['lottery/boxes/' + index] = result;
-      db.ref().update(update);
-    }
-
-    function renderBoxes() {
-      boxesContainer.innerHTML = '';
-      for(let i=0; i<totalBoxes; i++) {
-        const box = document.createElement('div');
-        box.className = 'box';
-        if (boxesState[i]) {
-          box.textContent = boxesState[i] === 'win' ? '🎁' : '❌';
-          box.classList.add('locked');
+    for (let i = 0; i < totalCells; i++) {
+      const cell = document.createElement('div');
+      cell.className = 'cell';
+      cell.textContent = '?';
+      cell.dataset.index = i;
+      cell.addEventListener('click', function () {
+        if (clicked.has(i)) return;
+        clicked.add(i);
+        cell.classList.add('clicked');
+        if (prizes.has(i)) {
+          cell.textContent = '🎉';
+          result.textContent = 'Ура, ты выбил приз!';
         } else {
-          box.textContent = '?';
-          box.addEventListener('click', () => {
-            if (boxesState[i]) return;
-            const isWin = prizeBoxes.includes(i);
-            const result = isWin ? 'win' : 'miss';
-            boxesState[i] = result;
-            saveChoice(i, result);
-            renderBoxes();
-            showMessage(isWin ? `Ура, ты выбил: ${prizeNames[i]}` : "К сожалению, мимо");
-          });
+          cell.textContent = '❌';
+          result.textContent = 'К сожалению, мимо.';
         }
-        boxesContainer.appendChild(box);
-      }
+      });
+      grid.appendChild(cell);
     }
-
-    function showMessage(text) {
-      messageEl.textContent = text;
-      setTimeout(() => { messageEl.textContent = ''; }, 4000);
-    }
-
-    loadState();
   </script>
 </body>
 </html>
